force-app/main/default/objects/enrollment__c/enrollment__c.object-meta.xml
<CustomObject>
    <label>enrollment</label>
    <nameField>
        <label>enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>