force-app/main/default/objects/enrollment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>enrollments (Student)</relationshipLabel>
    <relationshipName>enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>