force-app/main/default/objects/enrollment__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>enrollments</relationshipLabel>
    <relationshipName>enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>