force-app/main/default/objects/enrollment__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>enrollments</relationshipLabel>
    <relationshipName>enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>