force-app/main/default/objects/enrollment__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>enrollments (Training)</relationshipLabel>
    <relationshipName>enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>